--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ["ubuntu-latest"]
+        os: ["windows-latest"]
         go: ["1.24.x"]
     runs-on: ${{ matrix.os }}
     steps:
